<resources>
    <string name="app_name">Coding</string>
    <string name="action_settings">设置</string>
    <string name="action_refrush">刷新</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="title_activity_project">项目</string>
    <string name="title_activity_task_add">添加任务</string>
    <string name="title_activity_members">项目成员列表</string>
    <string name="title_activity_watcher_list">关注者列表</string>
    <string name="title_activity_attachment">项目文件列表</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_enterprise">Test 企业版</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_my_created">我创建的</string>
    <string name="title_activity_help">帮助</string>
    <string name="title_activity_user_info">个人信息</string>
    <string name="title_activity_user_info_skill">开发技能</string>
    <string name="title_activity_about_point">关于码币</string>
    <string name="title_activity_my_detail">个人主页</string>
    <string name="title_activity_comment_detail">评论详情</string>
    <string name="title_activity_history">历史版本</string>
    <string name="title_activity_close_2fa">关闭两步验证</string>
    <string name="title_activity_set_password">修改密码</string>
    <string name="title_activity_feedback">用户反馈</string>
    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_topic_comment">讨论</string>
    <string name="tip_need_phone_and_email">验证手机和邮箱后完善资料才能升级，<u>去验证</u></string>
    <string name="tip_need_userinfo">完善个人信息，即可升级成为银牌会员。<u>去完善</u></string>
    <string name="topic_create">创建讨论</string>
    <string name="topic_edit">编辑讨论</string>
    <string name="topic_label">标签管理</string>
    <string name="title_activity_make_maopao">发冒泡</string>
    <string name="title_activity_location_search">所在位置</string>
    <string name="title_activity_location_edit">创建位置</string>
    <string name="title_activity_location_detail">详情</string>
    <string name="title_activity_location_map">位置信息</string>
    <string name="title_activity_maopao_search">搜索</string>
    <string name="title_activity_subject_wall">话题墙</string>
    <string name="title_activity_users">用户列表</string>
    <string name="title_activity_project_members">成员管理</string>
    <string name="title_activity_add_follow">添加关注</string>
    <string name="title_activity_enterprise_add_member">添加成员</string>
    <string name="title_activity_user_detail">好友详情</string>
    <string name="title_activity_message_list">消息</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_activity2">TestActivity2</string>
    <string name="title_activity_friend">选择好友</string>
    <string name="tip_vip_expired">请到网站续费</string>
    <string name="tip_update_app">立即升级最新 Coding 客户端</string>
    <string name="sold_out_app">温馨提示：出于实际使用场景限制的考虑，该 App 不再进行更多新功能开发，建议您前往 PC 端网页版体验更完整的产品功能。</string>
    <string name="empty" />
    <string name="title_activity_manually_qcode">手动添加账号</string>
    <string name="title_activity_like_users_list">打赏和点赞的用户</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_maopao_detail">冒泡详情</string>
    <string name="title_activity_user_maopao">冒泡</string>
    <string name="btn_dialog_done">完成</string>
    <string name="btn_dialog_cancel">取消</string>
    <string name="hint_loading"></string>
    <string name="title_activity_picker_images">PickerImagesActivity</string>
    <string name="action_edit">编辑</string>
    <string name="action_new">新建</string>
    <string name="action_all">全选</string>
    <string name="action_inverse">反选</string>
    <string name="action_upload">上传</string>
    <string name="action_download">下载</string>
    <string name="action_save">保存</string>
    <string name="action_move">移动</string>
    <string name="action_add">添加</string>
    <string name="title_activity_pick_local">选择地区</string>
    <string name="action_delete">删除</string>
    <string name="action_new_folder">创建文件夹</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="action_perview">预览</string>
    <string name="action_info">信息</string>
    <string name="action_more">更多</string>
    <string name="title_activity_user_dynamic">UserDynamicActivity</string>
    <string name="title_activity_photo_pick_detail">PhotoPickDetailActivity</string>
    <string name="title_activity_git_tree">项目代码</string>
    <string name="title_activity_attachment_folder_selector">选择文件夹</string>
    <string name="title_activity_notify_setting">通知栏设置</string>
    <string name="title_activity_members_select">选择项目成员</string>
    <string name="title_activity_task_description">任务描述</string>
    <string name="title_activity_account_setting">账号设置</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_search_project"></string>
    <string name="title_activity_update_dialog">UpdateDialogActivity</string>
    <string name="location_undefined">所在位置</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_base_annotation">BaseAnnotationActivity</string>
    <string name="title_activity_terms">服务条款</string>
    <string name="create_task_ing">正在创建任务...</string>
    <string name="modify_task_ing">正在修改任务...</string>
    <string name="sending_comment">正在发送评论...</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_fail">关注失败</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="unfollow_fail">取消关注失败</string>
    <string name="delete_success">删除评论成功</string>
    <string name="delete_fail">删除评论失败</string>
    <string name="connect_service_fail">连接服务器失败，请检查网络或稍后重试</string>
    <string name="copy_link">复制链接</string>
    <string name="public_link">共享链接</string>
    <string name="delete_task">删除任务</string>
    <string name="delete_topic">删除讨论</string>
    <string name="perview">预览</string>
    <string name="edit">编辑</string>
    <string name="title_activity_update_tip">UpdateTipActivity</string>
    <string name="copy_link_finish">链接已复制</string>
    <string name="copy_code_finish">已复制</string>
    <string name="title_activity_file_url"></string>
    <string name="title_activity_project_home">项目首页</string>
    <string name="open_by_browser">用浏览器打开</string>
    <string name="title_activity_user_detail_more">TA 的资料</string>
    <string name="title_activity_user_project">TA的项目</string>
    <string name="title_activity_my_project">我的项目</string>
    <string name="title_activity_base_reset_password">BaseResetPasswordActivity</string>
    <string name="title_activity_reset_password">找回密码</string>
    <string name="title_activity_resend_email">用户激活</string>
    <string name="title_activity_reset_password_base">ResetPasswordBaseActivity</string>
    <string name="title_activity_user_active">用户激活</string>
    <string name="maopao_load_fail">冒泡载入失败</string>
    <string name="maopao_load_fail_comment">冒泡载入失败，不能发送评论</string>
    <string name="maopao_load_fail_like">冒泡载入失败，不能点赞</string>
    <string name="title_activity_project_create">创建项目</string>
    <string name="title_activity_project_type">项目类型</string>
    <string name="title_activity_project_set">项目设置</string>
    <string name="title_setting">设置</string>
    <string name="title_activity_project_advance_set">删除项目</string>
    <string name="title_activity_project_archive">项目归档</string>
    <string name="logining">登录中...</string>
    <string name="no_system_download_service">"下载失败，你可能关闭了系统的\"下载管理器\"，请到设置里面开启"</string>
    <string name="title_activity_merge">MergeActivity</string>
    <string name="recommend_create_readme">该项目暂无 README.md ，我们推荐每个项目都新建一个 README.md 文件。（客户端暂不支持创建和编辑，请前往网站创建）</string>
    <string name="title_activity_merge_detail">Merge详情</string>
    <string name="title_activity_commit_list">提交记录</string>
    <string name="title_activity_comment">评论</string>
    <string name="title_activity_merge_file_list">文件改动</string>
    <string name="title_activity_commit_file_list">Commit详情</string>
    <string name="title_activity_merge_accept">合并分支</string>
    <string name="title_activity_merge_file_detail">MergeFileDetail</string>
    <string name="title_activity_branch_commit_list">提交历史</string>
    <string name="title_activity_branch_main">branch</string>
    <string name="title_activity_guide">guide</string>
    <string name="title_activity_source">文件详情</string>
    <string name="title_activity_login2_fatip">两步验证</string>
    <string name="title_activity_valide_phone">手机验证</string>
    <string name="title_activity_email_set_password">找回密码</string>
    <string name="title_activity_phone_set_password">找回密码</string>
    <string name="title_input_account_activity">找回密码</string>
    <string name="set_global_activity">账号激活</string>
    <string name="qr_scan_activity">扫描二维码</string>
    <string name="auth_list_activity">身份验证器</string>
    <string name="scan_text">将二维码对准取景框，即可自动扫描</string>
    <string name="title_activity_pick_project">选择项目</string>
    <string name="no_pick">未指定</string>
    <string name="pick_project_first">请先选择一个项目</string>
    <string name="project_no_board">这个项目没有任务看板</string>
    <string name="title_activity_user_point">我的码币</string>
    <string name="title_activity_feature">FeatureActivity</string>
    <string name="title_activity_file_history">历史版本</string>
    <string name="title_activity_file_dynamic">文件动态</string>
    <string name="title_activity_member_authority_manual">成员权限说明</string>
    <string name="title_activity_release_detail">发布详情</string>
    <string name="title_activity_git_main">本地阅读</string>
    <string name="title_activity_board">任务看板</string>
    <string name="title_activity_add_board">创建任务列表</string>
    <string name="title_activity_pick_board_task_list">看板列表</string>
    <string name="title_activity_edit_release_detail">编辑发布</string>
    <string name="hold_to_talk">按住说话</string>
    <string name="loosen_to_cancel">松开取消</string>
    <string name="sliding_upwards_and_cancel_sending">向上滑动，取消发送</string>
    <string name="record_has_canceled">录音已取消</string>
    <string name="record_failed">录音失败</string>
    <string name="record_failed_no_enough_storage_space">无法访问存储空间,录音失败!</string>
    <string name="voice_can_not_send_because_duration_too_short">录音时间太短，取消发送!</string>
    <string name="title_activity_txt_edit">TxtEditActivity</string>
    <string name="title_activity_markdown_edit">Markdown编辑</string>
    <string name="title_activity_attachments_photo_detail">AttachmentsPhotoDetailActivity</string>
    <string name="title_activity_share_file_link">设置共享链接</string>
    <string name="title_activity_inform_maopao">举报</string>
    <string name="title_activity_share_sina_help">ShareSinaHelpActivity</string>
    <string name="title_activity_zhong_qiu_guide">ZhongQiuGuideActivity</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_forks_list">ForksListActivity</string>
    <string name="title_activity_local_project_file">本地文件</string>
    <string name="title_activity_local_file_list">LocalFileListActivity</string>
    <string name="title_activity_project_transfer">项目转让</string>
    <string name="title_activity_all_tasks">我的任务</string>
    <string name="title_activity_filter_tasks">任务筛选</string>
    <string name="alert_activity_email">欢迎注册 Coding，请尽快去邮箱查收邮件并激活账号。如若在收件箱中未看到激活邮件，请留意一下垃圾邮件箱(T_T)。</string>
    <string name="reset">重置</string>
    <string name="search">搜索</string>
    <string name="create_file">新建文件</string>
    <string name="upload_picture">上传图片</string>
    <string name="action_exit_code">退出代码查看</string>
    <string name="merge_all">全部</string>
    <string name="merge_can">可合并</string>
    <string name="merge_not">不可自动合并</string>
    <string name="merge_refuse">已拒绝</string>
    <string name="merge_accept">已合并</string>
    <string name="merge_open">已处理</string>
    <string name="merge_close">未处理</string>
</resources>