<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_menu_info_big"
        android:title="@string/action_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_download"
                android:icon="@drawable/ic_popup_attachment_download"
                android:title="@string/action_save"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_copy"
                android:icon="@drawable/ic_menu_link"
                android:title="@string/copy_link"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/action_delete"
                app:showAsAction="always" />


        </menu>
    </item>


</menu>
