<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AuthListActivity">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/action_more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_link_public"
                android:icon="@drawable/ic_menu_share_link"
                android:title="@string/public_link"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_menu_delete"
                android:orderInCategory="100"
                android:title="@string/action_delete"
                app:showAsAction="" />
        </menu>

    </item>
</menu>
