<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">
    <item
        android:id="@+id/action_all"
        android:title="@string/action_all"
        app:showAsAction="withText|always" />

    <item
        android:id="@+id/action_inverse"
        android:title="@string/action_inverse"
        app:showAsAction="withText|always" />

    <item
        android:id="@+id/action_more"
        android:title="@string/action_more"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="withText|always" />

    <!--<item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/ic_attachment_btn_download"
        app:showAsAction="withText|ifRoom" />-->
    <!--<item android:id="@+id/action_move"
        android:title="@string/action_move"
        android:icon="@drawable/ic_menu_move"
        app:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_menu_delete_selector"
        app:showAsAction="withText|ifRoom" />
-->


</menu>
