<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FAFAFA"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/merge_all_pr"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:button="@null"
        android:checked="true"
        android:gravity="center_vertical"
        android:text="@string/merge_all"
        android:textColor="@drawable/text_menu_selector"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/merge_open"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:button="@null"
        android:gravity="center_vertical"
        android:text="@string/merge_open"
        android:textColor="@drawable/text_menu_selector"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/merge_close"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:button="@null"
        android:gravity="center_vertical"
        android:text="@string/merge_close"
        android:textColor="@drawable/text_menu_selector"
        android:textSize="16sp" />
</RadioGroup>
