<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/white">

        <View
            style="@style/DivideLine"
            android:layout_above="@+id/rl_bottom"/>

        <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_reset"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/reset"
                android:textColor="@color/font_2"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_bottom"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="15dp"
                    android:tag="name"
                    android:text="@string/title_activity_filter_tasks"
                    android:textColor="@color/font_2"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <View style="@style/DivideLine"/>

            <com.flyco.roundview.RoundRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_search_grey"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical|left"
                    android:hint="查找相关任务 "
                    android:imeOptions="actionSearch"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textColor="@color/font_2"
                    android:textColorHint="@color/font_9"
                    android:textSize="12sp"/>

            </com.flyco.roundview.RoundRelativeLayout>

            <View style="@style/DivideLine_15"/>

            <TextView
                android:id="@+id/tv_task_doing"
                style="@style/TextViewFilterTag"

                android:drawableRight="@drawable/ic_task_status_list_check"
                android:text="@string/title_activity_all_tasks"/>

            <TextView
                android:id="@+id/tv_task_done"
                style="@style/TextViewFilterTag"
                android:text="@string/title_activity_all_tasks"/>

            <View style="@style/DivideLine_15"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_labels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>